# portfolio-airflow-dbt-local-setup

./: .gitignore  docker-compose.yml  generate-fake-data.py  pyproject.toml
