[tool.poetry]
name = "portfolio-airflow-dbt"
version = "0.1.0"
description = ""
authors = ["Humberto Lomeu <hcslomeu@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <4.0"

# Web frameworks
fastapi = "^0.125.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
streamlit = "^1.30.0"

# Database
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
duckdb = "^0.10.0"

# DBT / Data transformation
dbt-core = "^1.9.0"
dbt-postgres = "^1.9.0"

# Data processing
pandas = "^2.2.0"
numpy = "^2.0.0"
pyarrow = "^17.0.0"  # For Parquet files
# polars = "^0.20.0"  # Modern alternative to pandas

# Data generation
faker = "^33.0.0"

# Cloud & Infrastructure
# boto3 = "^1.34.0"  # AWS SDK
# apache-airflow = "^2.8.0"  # Workflow orchestration
# prefect = "^2.14.0"  # Modern alternative to Airflow

# CLI tools
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"  # Beautiful terminal output

# HTTP clients
httpx = "^0.27.0"  # Modern async HTTP client (also used for testing FastAPI)
requests = "^2.31.0"  # Traditional HTTP client

# Configuration
pydantic = "^2.5.0"  # Data validation
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# Code quality
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pydocstyle = "^6.3.0"
bandit = "^1.7.6"

# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
# pytest-mock = "^3.12.0" # Use mock if you cannot reproduce the outcome of a function

# Documentation
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.2"
pygments = "^2.16.1"
mkdocs-material = "^9.5.0"
pymdown-extensions = "^10.7.0"

# Utilities
taskipy = "^1.12.2"
pre-commit = "^3.6.0"
pip-audit = "^2.10.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.taskipy.tasks]
format = """
isort src/ tests/
black src/ tests/
"""
lint = """
flake8 src/
mypy src/
pylint src/
"""
security = """
bandit -r src/ -c pyproject.toml
pip-audit
"""
test = "pytest -v --cov=src --cov-report=html"
test-watch = "pytest -v --cov=src -f"
kill = "kill -9 $(lsof -t -i :8000)"
run = "python src/app/main.py"
api = "uvicorn src.app.main:app --reload --host 0.0.0.0 --port 8000"
doc = "mkdocs serve"
doc-build = "mkdocs build"
all = """
task format
task lint
task security
task test
"""

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B104"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
